# python-docker

base/: .zshrc  Dockerfile  Makefile  README.md
dj-node/: .zshrc  Dockerfile  Makefile  serve
django/: Dockerfile  Makefile  apimake  pyproject.toml
python/: Dockerfile  Makefile  pyproject.toml
python-angular/: Dockerfile  Makefile  README.md
python-node/: .dockerignore  Dockerfile  Makefile  README.md  serve
