[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pat McLean <github@psmware.ie>"]
license = "AGPL3-only"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.3"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.6.0"
django-filter = "^2.4.0"
drf-yasg = "^1.20.0"
django-rest-swagger = "^2.2.0"
setuptools = "^56.2.0"
psycopg2-binary = "~2.8.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"