[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pat McLean <github@psmware.ie>"]
license = "AGPL3-only"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocstrings = "^0.15.1"
mkdocs-material = "^7.1.5"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mkdocs-with-pdf = "^0.8.3"
mkdocs-mermaid2-plugin = "^0.5.1"
ansible-mdgen = "^0.1.0"
mkdocs-git-committers-plugin = "^0.2.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
autopep8 = "^1.5.7"
black = "^21.5b1"
flake8 = "^3.9.2"
pytest-mock = "^3.6.1"
pytest = "^6.2.4"
pylint = "^2.8.2"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"